[tool.poetry]
name = "PTPAPI"
version = "0.7.2"
description = "A small API for a mildly popular movie site"
authors = ["kannibalox <kannibalox@gmail.com>"]
repository = "https://github.com/kannibalox/PTPAPI"
packages = [
  { include = "ptpapi", from = "src" }
]
classifiers = [
        "Development Status :: 4 - Beta",
        "Natural Language :: English",
        "Operating System :: POSIX",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Utilities",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
guessit = "^3.4.3"
pyrosimple = "^2.0.0"
requests = "^2.27.1"
Tempita = "^0.5.2"
beautifulsoup4 = "^4.10.0"
"bencode.py" = "^4.0.0"
humanize = "^4.0.0"
libtc = "^1.3.1"

[tool.poetry.scripts]
ptp = "ptpapi.scripts.ptp:main"
"ptp-reseed" = "ptpapi.scripts.ptp_reseed:main"
"ptp-reseed-machine" = "ptpapi.scripts.ptp_reseed_machine:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint]
[tool.pylint.'MESSAGES CONTROL']
disable="locally-disabled, bad-continuation, superfluous-parens, no-else-return, too-many-arguments,logging-not-lazy, logging-format-interpolation, too-few-public-methods, protected-access, duplicate-code, consider-using-f-string, fixme, invalid-name, line-too-long, design, missing-function-docstring"

[tool.isort]
profile = "black"
force_single_line = false
atomic = true
include_trailing_comma = true
lines_after_imports = 2
lines_between_types = 1
use_parentheses = true

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
